styx-format/src/snapshots/styx_format__cst_format__tests__fmt_027_block_object_multiple_blank_lines.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {\\n  a 1\\n\\n\\n\\n  b 2\\n}\")"
---
config {
    a 1

    b 2
}
