styx-format/src/snapshots/styx_format__cst_format__tests__fmt_028_empty_block_object.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {\\n}\")"
---
config {}
