styx-format/src/snapshots/styx_format__cst_format__tests__fmt_029_block_single_entry.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {\\n  only_one value\\n}\")"
---
config {
    only_one value
}
