styx-format/src/snapshots/styx_format__cst_format__tests__fmt_030_mixed_block_inline_siblings.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"a {x 1}\\nb {\\n  y 2\\n}\")"
---
a {x 1}

b {
    y 2
}
