styx-format/src/snapshots/styx_format__cst_format__tests__fmt_032_single_item_sequence.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"items (one)\")"
---
items (one)
