styx-format/src/snapshots/styx_format__cst_format__tests__fmt_033_multi_item_sequence.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"items (a b c d e)\")"
---
items (a b c d e)
