styx-format/src/snapshots/styx_format__cst_format__tests__fmt_034_nested_sequences.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"matrix ((1 2) (3 4))\")"
---
matrix ((1 2) (3 4))
