styx-format/src/snapshots/styx_format__cst_format__tests__fmt_035_sequence_of_objects.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"points ({x 1} {x 2})\")"
---
points ({x 1} {x 2})
