styx-format/src/snapshots/styx_format__cst_format__tests__fmt_036_block_sequence.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"items (\\n  a\\n  b\\n  c\\n)\")"
---
items (
    a
    b
    c
)
