styx-format/src/snapshots/styx_format__cst_format__tests__fmt_037_sequence_with_trailing_newline.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"items (a b c\\n)\")"
---
items (
    a
    b
    c
)
