styx-format/src/snapshots/styx_format__cst_format__tests__fmt_038_tag_with_sequence_payload.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"type @seq(a b c)\")"
---
type @seq(a b c)
